smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/namespace/namespace-multiple-lines.smithy
// Parse error at line 3, column 14 near `//`: Expected a valid identifier character, but found '/' | Model
$version: "2.0"
namespace    // Spaces are fine. The comment is fine. But the newline is not fine.
com.foo
